moves around the logic of the splash screen, still has issues with making the splash visible when clicking the back button

--- a/app/assets/stylesheets/splash.less
+++ b/app/assets/stylesheets/splash.less
@@ -126,6 +126,17 @@
 	padding-right: 20px;
 }
 
+#splash-button {
+	border-radius:15px;
+	background-color:white;
+	margin-left:20px;
+	padding:15px;
+	width:100px;
+	text-align:center;
+	display:inline-block;
+	font-size:15px;
+}
+
 #splash-card-text-header {
 	font-size: 40px;
 }
